CREATE TYPE GENRE_MUSIQUE AS ENUM(
  'pop', 'rock', 'jazz', 'blues', 'electronique', 'variete', 'rap', 'reggae'
);

CREATE SEQUENCE TITRE_SEQ
    start 1
    increment 1
    NO MAXVALUE
    CACHE 1;

CREATE SEQUENCE PLAYLIST_SEQ
    start 1
    increment 1
    NO MAXVALUE
    CACHE 1;

CREATE TABLE UTILISATEUR(
  pseudo VARCHAR(15) PRIMARY KEY,
  motDePasse VARCHAR(64) NOT NULL,
  nom VARCHAR(15),
  prenom VARCHAR(15),
  age INTEGER CONSTRAINT age_constraint CHECK (age > 0 AND age < 99)
);

CREATE TABLE ARTISTE(
  nom VARCHAR(25) PRIMARY KEY,
  nationalite VARCHAR(50)
);

CREATE TABLE ALBUM(
  nom VARCHAR(25) PRIMARY KEY,
  nomArtiste VARCHAR(25) REFERENCES ARTISTE NOT NULL,
  annee INTEGER CONSTRAINT year_constraint CHECK (annee > 0 AND annee < 3000)
);

CREATE TABLE TITRE( -- Voir necessité de nomArtiste après refactoring
  id INTEGER PRIMARY KEY DEFAULT nextval('TITRE_SEQ'),
  nom VARCHAR(50) NOT NULL,
  duree INTEGER NOT NULL,
  nomAlbum VARCHAR(25) REFERENCES ALBUM(nom),
  genre GENRE_MUSIQUE
);

CREATE TABLE LISTE_TITRE(
  pseudoUser VARCHAR(15) REFERENCES UTILISATEUR(pseudo),
  titreId INTEGER REFERENCES TITRE(id),
  PRIMARY KEY (pseudoUser, titreId)
);

CREATE TABLE LISTE_ALBUM(
  pseudoUser VARCHAR(15) REFERENCES UTILISATEUR(pseudo),
  nomAlbum VARCHAR(25) REFERENCES ALBUM(nom),
  PRIMARY KEY (pseudoUser, nomAlbum)
);

CREATE TABLE LISTE_ARTISTE(
  pseudoUser VARCHAR(15) REFERENCES UTILISATEUR(pseudo),
  nomArtiste VARCHAR(25) REFERENCES ARTISTE(nom),
  PRIMARY KEY (pseudoUser, nomArtiste)
);

CREATE TABLE ECOUTE(
  pseudoUser VARCHAR(15) REFERENCES UTILISATEUR(pseudo),
  dateEcoute TIMESTAMP DEFAULT (NOW()::TIMESTAMP AT TIME ZONE 'UTC'),
  titreId INTEGER REFERENCES TITRE(id),
  PRIMARY KEY (pseudoUser, dateEcoute)
);

CREATE TABLE PLAYLIST(
  id INTEGER PRIMARY KEY DEFAULT nextval('PLAYLIST_SEQ'),
  nom VARCHAR(25) NOT NULL,
  pseudoUser VARCHAR(15) REFERENCES UTILISATEUR(pseudo)
);

CREATE TABLE PLAYLIST_TITRE(
  titreId INTEGER REFERENCES TITRE(id),
  playlistId INTEGER REFERENCES PLAYLIST(id),
  PRIMARY KEY (titreId, playlistId)
);
